@@ -35,7 +35,7 @@
 // - false      debug mode disabled
 // - true       debug mode enabled
 //
-define('DEBUG', false);
+define('DEBUG', true);
 if (DEBUG) {
     error_reporting(E_ALL & E_STRICT);
     ini_set('display_errors', 1);
