@@ -7,6 +7,7 @@ This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.7.5 - 2012-04-
 - full support for Microsoft SQL Server Driver for PHP (Thorsten)
+- added online verification check (Thorsten, Florian)
 - added experimental support for SQLite3 (Thorsten)
 - updated Spanish translation (Reynaldo Martinez P.)
 - fixed Slovak translation (Thorsten)
